# ai-bootcamp-codespace

./: .gitignore  pyproject.toml
ivan/: ivan_readme.md  week1_detailed_hw.ipynb  week1_hw.py  week2_detailed_hw.ipynb
week2/: agents-sdk-multiagent-system.ipynb  mcp-client.ipynb  mcp-pydantic-ai.ipynb  pydantic-ai-deep-research.ipynb  pydantic-ai-intro.ipynb  pydantic-ai-multiagent.ipynb  youtube.py
week2/mcp_faq/: main.py  pyproject.toml
